fixing overflow on all screens

--- a/TableTalk/src/pages/Blog.css
+++ b/TableTalk/src/pages/Blog.css
@@ -1,5 +1,4 @@
 .blog-container {
-    padding: 2rem;
     display: flex;
     justify-content: center;
     width: 100%;
