--- a/TableTalk/src/pages/Search.css
+++ b/TableTalk/src/pages/Search.css
@@ -1,6 +1,5 @@
 /* Page Layout */
 .search-page-container {
-  padding: 0.5rem;
   display: flex;
   justify-content: center;
 }
