--- a/TableTalk/src/pages/Suggest.css
+++ b/TableTalk/src/pages/Suggest.css
@@ -3,7 +3,7 @@
   display: flex;
   max-width: 1600px;
   max-height: 755px;
-  margin: 40px auto;
+  margin: 20px auto;
   gap: 20px; 
   align-items: stretch;
 }
